--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,10 @@
+2025-03-27 Version: 6.1.0
+- Support API DescribeRegions.
+- Update API CreateGatewayIntranetLinkedVpc: add request parameters EnableAuthoritativeDns.
+- Update API ListGatewayIntranetLinkedVpc: add response parameters Body.IntranetLinkedVpcList.$.AuthoritativeDnsEnabled.
+- Update API ListServices: add request parameters ResourceType.
+
+
 2025-02-25 Version: 6.0.8
 - Generated cpp 2021-07-01 for eas.
 
