Update API ListServices: add request parameters ResourceAliasName.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,11 @@
 - Update API ListServices: add request parameters ResourceId.
 
 
+2025-04-27 Version: 7.0.4
+- Update API ListServices: add request parameters ResourceAliasName.
+- Update API ListServices: add request parameters ResourceId.
+
+
 2025-04-23 Version: 7.0.3
 - Update API CreateResource: add request parameters body.ResourceName.
 
